[project]
name = "tomp3"
version = "0.1.0"
description = "Convert audio files to mp3 format"
readme = "README.md"
requires-python = ">=3.13"
author = "Danilo Almeida"
dependencies = [
    "ffmpeg-python>=0.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tomp3"]