[project]
name = "tomp3"
version = "1.0.1"
description = "Convert audio files to mp3 format"
readme = "README.md"
requires-python = ">=3.13"
author = "Danilo Almeida"
dependencies = [
    "rich>=14.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tomp3"]

[tool.ruff.lint]
select = [
  "E",  # pycodestyle
  "F",  # pyflakes
  "I",  # isort
]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff]
line-length = 88
indent-width = 4

[tool.mypy]
strict = true
ignore_missing_imports = true

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pre-commit>=4.2.0",
    "ruff>=0.11.9",
]
